backend/src/main/java/com/example/sap_shop/error/InvalidRequestBodyException.java
package com.example.sap_shop.error;

public class InvalidRequestBodyException extends Exception{
    public InvalidRequestBodyException(String message) {
        super(message);
    }
}
